--- a/bootstrap/css/bootstrap_extensions.css
+++ b/bootstrap/css/bootstrap_extensions.css
@@ -33,6 +33,7 @@ hr{
 #twitter_status {
 	color:#f2f2f2;
 	font:24px 'FanwoodRegular', Arial, sans-serif;
+	font-weight:normal;
 }
 .footer {
 	border-top:5px solid #09c;
@@ -53,20 +54,24 @@ hr{
 	margin-top:5px;
 }
 img {
-   border-right:5px solid #999;
+	 border-right:5px solid #999;
 }
 
 /*font faces/coloring*/
 h1 {
-	font:60px 'BebasNeueRegular', Arial, sans-serif;letter-spacing:0;
+	font:60px 'BebasNeueRegular', Arial, sans-serif;
+	letter-spacing:0;
+	font-weight:400;
 }
 h2{
 	font:27px 'FanwoodRegular', Arial, sans-serif;
-	font-weight:0;
+	font-weight:400;
 }
 h3{
-	font:23px 'BebasNeueRegular', Arial, sans-serif;letter-spacing:0;
+	font:23px 'BebasNeueRegular', Arial, sans-serif;
+	letter-spacing:0;
 	padding-top:10px;
+	font-weight:400;
 }
 h4{
 
@@ -112,190 +117,190 @@ p {
 	font-family:'Lucida Grande', Arial, sans-serif !important;
 }
 .only_mobile {
-  display:none;
+	display:none;
 }
 
 /*tap zoom for IE8 shit*/
 canvas {
-    -ms-touch-action: double-tap-zoom;
+		-ms-touch-action: double-tap-zoom;
 }
 
 /*subnav*/
 .subnav {
-  width:100%;
-  height:36px;
-  background-color:#eeeeee; /* Old browsers */
-  background-repeat:repeat-x; /* Repeat the gradient */
-  background-image:-moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* FF3.6+ */
-  background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#eeeeee)); /* Chrome,Safari4+ */
-  background-image:-webkit-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Chrome 10+,Safari 5.1+ */
-  background-image:-ms-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* IE10+ */
-  background-image:-o-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Opera 11.10+ */
-  filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
-  background-image:linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* W3C */
-  border:1px solid #e5e5e5;
-  -webkit-border-radius:4px;
-     -moz-border-radius:4px;
-          border-radius:4px;
+	width:100%;
+	height:36px;
+	background-color:#eeeeee; /* Old browsers */
+	background-repeat:repeat-x; /* Repeat the gradient */
+	background-image:-moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* FF3.6+ */
+	background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#eeeeee)); /* Chrome,Safari4+ */
+	background-image:-webkit-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Chrome 10+,Safari 5.1+ */
+	background-image:-ms-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* IE10+ */
+	background-image:-o-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Opera 11.10+ */
+	filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
+	background-image:linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* W3C */
+	border:1px solid #e5e5e5;
+	-webkit-border-radius:4px;
+		 -moz-border-radius:4px;
+					border-radius:4px;
 }
 .subnav .nav {
-  margin-bottom:0;
+	margin-bottom:0;
 }
 .subnav .nav > li > a {
-  margin:0;
-  padding-top:   11px;
-  padding-bottom:11px;
-  border-left:1px solid #f5f5f5;
-  border-right:1px solid #e5e5e5;
-  -webkit-border-radius:0;
-     -moz-border-radius:0;
-          border-radius:0;
+	margin:0;
+	padding-top:   11px;
+	padding-bottom:11px;
+	border-left:1px solid #f5f5f5;
+	border-right:1px solid #e5e5e5;
+	-webkit-border-radius:0;
+		 -moz-border-radius:0;
+					border-radius:0;
 }
 .subnav .nav > .active > a,
 .subnav .nav > .active > a:hover {
-  padding-left:13px;
-  color:#777;
-  background-color:#e9e9e9;
-  border-right-color:#ddd;
-  border-left:0;
-  -webkit-box-shadow:inset 0 3px 5px rgba(0,0,0,.05);
-     -moz-box-shadow:inset 0 3px 5px rgba(0,0,0,.05);
-          box-shadow:inset 0 3px 5px rgba(0,0,0,.05);
+	padding-left:13px;
+	color:#777;
+	background-color:#e9e9e9;
+	border-right-color:#ddd;
+	border-left:0;
+	-webkit-box-shadow:inset 0 3px 5px rgba(0,0,0,.05);
+		 -moz-box-shadow:inset 0 3px 5px rgba(0,0,0,.05);
+					box-shadow:inset 0 3px 5px rgba(0,0,0,.05);
 }
 .subnav .nav > .active > a .caret,
 .subnav .nav > .active > a:hover .caret {
-  border-top-color:#777;
+	border-top-color:#777;
 }
 .subnav .nav > li:first-child > a,
 .subnav .nav > li:first-child > a:hover {
-  border-left:0;
-  padding-left:12px;
-  -webkit-border-radius:4px 0 0 4px;
-     -moz-border-radius:4px 0 0 4px;
-          border-radius:4px 0 0 4px;
+	border-left:0;
+	padding-left:12px;
+	-webkit-border-radius:4px 0 0 4px;
+		 -moz-border-radius:4px 0 0 4px;
+					border-radius:4px 0 0 4px;
 }
 .subnav .nav > li:last-child > a {
-  border-right:0;
+	border-right:0;
 }
 .subnav .dropdown-menu {
-  -webkit-border-radius:0 0 4px 4px;
-     -moz-border-radius:0 0 4px 4px;
-          border-radius:0 0 4px 4px;
+	-webkit-border-radius:0 0 4px 4px;
+		 -moz-border-radius:0 0 4px 4px;
+					border-radius:0 0 4px 4px;
 }
 
 /* Fixed subnav on scroll, but only for 980px and up (sorry IE!) */
 
 @media (min-width:980px) {
 	 /* Remove any padding from the body */
-  body {
-    padding-top:0px!important;
+	body {
+		padding-top:0px!important;
 	margin-top:0px!important;
-  }
-  section{
+	}
+	section{
 	margin-top:60px!important;
 }
 
-  .subnav-fixed {
-    position:fixed;
-    top:40px;
-    left:0;
-    right:0;
-    z-index:1030;
-    border-color:#d5d5d5;
-    border-width:0 0 1px; /* drop the border on the fixed edges */
-    -webkit-border-radius:0;
-       -moz-border-radius:0;
-            border-radius:0;
-    -webkit-box-shadow:inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
-       -moz-box-shadow:inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
-            box-shadow:inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
-  }
-  .subnav-fixed .nav {
-    width:938px;
-    margin:0 auto;
-    padding:0 1px;
-  }
-  .subnav .nav > li:first-child > a,
-  .subnav .nav > li:first-child > a:hover {
-    -webkit-border-radius:0;
-       -moz-border-radius:0;
-            border-radius:0;
-  }
-  .only_mobile {
-    display:none;
-  }
+	.subnav-fixed {
+		position:fixed;
+		top:40px;
+		left:0;
+		right:0;
+		z-index:1030;
+		border-color:#d5d5d5;
+		border-width:0 0 1px; /* drop the border on the fixed edges */
+		-webkit-border-radius:0;
+			 -moz-border-radius:0;
+						border-radius:0;
+		-webkit-box-shadow:inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+			 -moz-box-shadow:inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+						box-shadow:inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+	}
+	.subnav-fixed .nav {
+		width:938px;
+		margin:0 auto;
+		padding:0 1px;
+	}
+	.subnav .nav > li:first-child > a,
+	.subnav .nav > li:first-child > a:hover {
+		-webkit-border-radius:0;
+			 -moz-border-radius:0;
+						border-radius:0;
+	}
+	.only_mobile {
+		display:none;
+	}
 }
 
 @media (min-width:1210px) {
 
-  /* Update subnav container */
-  .subnav-fixed .nav {
-    width:1168px; /* 2px less to account for left/right borders being removed when in fixed mode */
-  }
+	/* Update subnav container */
+	.subnav-fixed .nav {
+		width:1168px; /* 2px less to account for left/right borders being removed when in fixed mode */
+	}
 
-  section{
+	section{
 	margin-top:60px!important;
-  }
-  .only_mobile {
-    display:none;
-  }
+	}
+	.only_mobile {
+		display:none;
+	}
 }
 
 @media (max-width:768px) {
 
-  /* Remove any padding from the body */
-  body {
-    padding-top:0px!important;
+	/* Remove any padding from the body */
+	body {
+		padding-top:0px!important;
 	margin-top:0px!important;
-  }
+	}
 
 	section{
 		margin-top:20px;
 	}
-  /* Subnav */
-  .subnav {
-    position:static;
-    top:auto;
-    z-index:auto;
-    width:auto;
-    height:auto;
-    background:#fff; /* whole background property since we use a background-image for gradient */
-    -webkit-box-shadow:none;
-       -moz-box-shadow:none;
-            box-shadow:none;
-  }
-  .subnav .nav > li {
-    float:none;
-  }
-  .subnav .nav > li > a {
-    border:0;
-  }
-  .subnav .nav > li + li > a {
-    border-top:1px solid #e5e5e5;
-  }
-  .subnav .nav > li:first-child > a,
-  .subnav .nav > li:first-child > a:hover {
-      -webkit-border-radius:4px 4px 0 0;
-         -moz-border-radius:4px 4px 0 0;
-              border-radius:4px 4px 0 0;
-  }
+	/* Subnav */
+	.subnav {
+		position:static;
+		top:auto;
+		z-index:auto;
+		width:auto;
+		height:auto;
+		background:#fff; /* whole background property since we use a background-image for gradient */
+		-webkit-box-shadow:none;
+			 -moz-box-shadow:none;
+						box-shadow:none;
+	}
+	.subnav .nav > li {
+		float:none;
+	}
+	.subnav .nav > li > a {
+		border:0;
+	}
+	.subnav .nav > li + li > a {
+		border-top:1px solid #e5e5e5;
+	}
+	.subnav .nav > li:first-child > a,
+	.subnav .nav > li:first-child > a:hover {
+			-webkit-border-radius:4px 4px 0 0;
+				 -moz-border-radius:4px 4px 0 0;
+							border-radius:4px 4px 0 0;
+	}
 
-  /* Popovers */
-  .large-bird {
-    display:none;
-  }
-  .popover-well .popover-wrapper {
-    margin-left:0;
-  }
+	/* Popovers */
+	.large-bird {
+		display:none;
+	}
+	.popover-well .popover-wrapper {
+		margin-left:0;
+	}
 
-  /* Space out the show-grid examples */
-  .show-grid [class*="span"] {
-    margin-bottom:5px;
-  }
-  .hide_mobile {
-    display:none;
-  }
-  .only_mobile {
-    display:block;
-  }
+	/* Space out the show-grid examples */
+	.show-grid [class*="span"] {
+		margin-bottom:5px;
+	}
+	.hide_mobile {
+		display:none;
+	}
+	.only_mobile {
+		display:block;
+	}
 }
